--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -23,6 +23,9 @@ spring:
     multipart:
       max-file-size: 60MB
       max-request-size: 60MB
+  redis:
+    port: 7000
+    host: 192.168.181.15
 # mybatis
 mybatis:
   type-aliases-package: com.baizhi.wts.entity
